objects/Seat__c/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <label>Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric Standing Desk</fullName>
            </value>
            <value>
                <fullName>2 Screens</fullName>
            </value>
            <value>
                <fullName>3 Screens</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Scanner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>