objects/Seat__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>Coordinates</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>