objects/Seat__c/fields/CoordinatesCenter__c.field-meta.xml
<CustomField>
    <fullName>CoordinatesCenter__c</fullName>
    <label>CoordinatesCenter</label>
    <length>150</length>
    <type>Text</type>
</CustomField>