objects/Seat__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Floor</label>
    <referenceTo>Map__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>