objects/Seat__c/fields/Height_Label__c.field-meta.xml
<CustomField>
    <fullName>Height_Label__c</fullName>
    <label>Height Label</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>