objects/Seat__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighborhood</label>
    <referenceTo>Neighborhood__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>