objects/Seat__c/fields/Rotate_Label__c.field-meta.xml
<CustomField>
    <fullName>Rotate_Label__c</fullName>
    <label>Rotate Label</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>