objects/Seat__c/fields/Width_Label__c.field-meta.xml
<CustomField>
    <fullName>Width_Label__c</fullName>
    <label>Width Label</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>