objects/Seat__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>