objects/Seat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Key__c</columns>
    <columns>Floor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>